--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/stocks_live
-spring.datasource.email=root
+spring.datasource.username=root
 spring.datasource.password=
 server.port=8081
 
@@ -8,6 +8,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 # logs the SQL statements
-log4j.logger.org.hibernate.SQL=debug
+#log4j.logger.org.hibernate.SQL=debug
 # Logs the JDBC parameters passed to a query
-log4j.logger.org.hibernate.type=trace
+#log4j.logger.org.hibernate.type=trace
